<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">attEMpeR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="add_patient_title">Add Patient</string>
    <string name="add_title">Add</string>
    <string name="add_assessment_title">Add Assessment</string>
    <string name="logout_title">Logout</string>
    <string name="title_activity_add_patient">Add a New Patient</string>
    <string name="hello_world">Hello world!</string>
    <string name="patient_first_name">First Name</string>
    <string name="patient_last_name">Last Name</string>
    <string name="patient_birthdate">Birthdate</string>
    <string name="patient_middle_name">Middle Name</string>
    <string name="patient_social_security">Social Security Number</string>
    <string name="patient_height">Height (cm)</string>
    <string name="patient_weight">Weight (kg)</string>
    <string name="patient_address_street">Street</string>
    <string name="cancel_title">Cancel</string>
    <string name="basic_information">Basic Information</string>
    <string name="patient_primary_language">Primary Language</string>
    <string name="patient_will">Will</string>
    <string name="patient_advanced_directive">Advanced Directive</string>
    <string name="patient_lives_at">Lives At:</string>
    <string name="patient_status_code">Status Code:</string>
    <string name="patient_flu_shot">Flu Shot</string>
    <string name="patient_date">Date</string>
    <string name="patient_pneumonia">Pneumonia</string>
    <string name="patient_address">Address</string>
    <string name="patient_street_2">Street 2</string>
    <string name="patient_city">City</string>
    <string name="patient_state">State</string>
    <string name="patient_zip_code">Zip Code</string>
    <string name="patient_contact">Contact</string>
    <string name="patient_phone_number">Phone Number</string>
    <string name="patient_emergency_contact">Emergency Contact</string>
    <string name="patient_emergency_full_name">Full Name</string>
    <string name="patient_emg_relationship">Relationship</string>
    <string name="patient_insurance_information">Insurance Information</string>
    <string name="patient_insurance_company_name">Company Name</string>
    <string name="patient_insurance_policy_number">Policy Number</string>
    <string name="button_add_patient">Add Patient</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_search">Search for Patients</string>
    <string name="search">Search</string>
    <string name="title_activity_search_details">Patient Details</string>
    <string name="add_patient_to_roster">Add Patient to Roster</string>
    <string name="welcome">Welcome!</string>
    <string name="patient_list">Patient List</string>
    <string name="title_activity_patient_details">Patient Details</string>
    <string name="button_update_patient">Update Patient</string>
    <string name="title_activity_assessment_management">Assessment Management</string>
    <string name="assessments">Assessments</string>
    <string name="add_assessment_button">Add Assessment</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="assessment_time">Assessment Time</string>
    <string name="action_assessments">Assessments</string>
    <string name="title_activity_add_assessment">Add New Assessment</string>
    <string name="title_activity_assessment_details">Assessment Details</string>
    <string name="neurological">Neurological</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="levelOfConsciousness">LOC</string>
    <string name="orientation">Orientation</string>
    <string name="pupils">Pupils</string>
    <string name="rightEye">Right Eye</string>
    <string name="leftEye">Left Eye</string>
    <string name="upperExtremity">Upper Extremity</string>
    <string name="lowerExtremity">Lower Extremity</string>
    <string name="size">Size</string>
    <string name="reaction">Reaction</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="muscleStrength">Muscle Strength</string>
    <string name="respiratory">Respiratory</string>
    <string name="breathSounds">Breath Sounds</string>
    <string name="anterior">Anterior</string>
    <string name="posterior">Posterior</string>
    <string name="noDistress">No Distress</string>
    <string name="labored">Labored</string>
    <string name="shortnessOfBreath">Shortness Of Breath</string>
    <string name="respirations">Respirations</string>
    <string name="chestExcursion">Chest Excursion</string>
    <string name="symmetrical">Symmetrical</string>
    <string name="asymmetrical">Asymmetrical</string>
    <string name="cough">Cough</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="productive">Productive</string>
    <string name="nonProductive">Non-Productive</string>
    <string name="cardio">Cardio</string>
    <string name="radialPulse">Radial Pulse</string>
    <string name="capillaryRefill">Capillary Refill</string>
    <string name="lessThan2Sec">Less than 2 sec</string>
    <string name="greaterThan2Sec">Greater than 2 sec</string>
    <string name="warm">Warm</string>
    <string name="cool">Cool</string>
    <string name="clammy">Clammy</string>
    <string name="diaphoretic">Diaphoretic</string>
    <string name="temperature">Temperature</string>
    <string name="edema">Edema</string>
    <string name="rightArm">Right Arm</string>
    <string name="pitting">Pitting</string>
    <string name="nonPitting">Non-Pitting</string>
    <string name="leftArm">Left Arm</string>
    <string name="rightLeg">Right Leg</string>
    <string name="leftLeg">Left Leg</string>
    <string name="jvd">JVD</string>
    <string name="rhythm">Rhythm</string>
    <string name="gastrointestinal">Gastrointestinal</string>
    <string name="bowelSounds">Bowel Sounds</string>
    <string name="normal">Normal</string>
    <string name="hyperactive">Hyperactive</string>
    <string name="hypoactive">Hypoactive</string>
    <string name="absent">Absent</string>
    <string name="abdomen">Abdomen</string>
    <string name="soft">Soft</string>
    <string name="firm">Firm</string>
    <string name="hard">Hard</string>
    <string name="distended">Distended</string>
    <string name="nausea">Nausea</string>
    <string name="emesis">Emesis</string>
    <string name="turgor">Turgor</string>
    <string name="tenting">Tenting</string>
    <string name="taut">Taut</string>
    <string name="shiny">Shiny</string>
    <string name="skin">Skin</string>
    <string name="pale">Pale</string>
    <string name="flushed">Flushed</string>
    <string name="cyanotic">Cyanotic</string>
    <string name="jaundiced">Jaundiced</string>
    <string name="urine">Urine</string>
    <string name="color">Color</string>
    <string name="character">Character</string>
    <string name="foleyCatheter">Foley Catheter</string>
    <string name="update_assessment">Update Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="continent">Continent</string>
    <string name="stool">Stool</string>
    <string name="site">Site</string>
    <string name="wellApprox">Well-Approx</string>
    <string name="woundOpen">Wound Open</string>
    <string name="redness">Redness</string>
    <string name="swelling">Swelling</string>
    <string name="dressingIntact">Dressing Intact</string>
    <string name="steriStripped">Steri-Stripped</string>
    <string name="staples">Staples / Sutures</string>
    <string name="drainage">Drainage</string>
    <string name="dressing">Dressing</string>
    <string name="stage">Stage</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="incisions">Incisions</string>
    <string name="addIncision">Add Incision</string>
    <string name="addBreakdown">Add Breakdown</string>
    <string name="breakdowns">Breakdowns</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="pulse">Pulse</string>
    <string name="pedalPulse">Pedal Pulse</string>

</resources>
