<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.attemper.emr.AddPatientActivity" >

<ScrollView
    android:id="@+id/sclView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    <TextView
        android:id="@+id/lblBasicInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_information"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_first_name"
        android:inputType="textPersonName|textCapWords" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtMiddleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_middle_name"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_last_name"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/txtBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_birthdate"
        android:inputType="date"
         />

    <EditText
        android:id="@+id/txtSocialSecurity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_social_security"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_height"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_weight"
            android:inputType="number" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtPrimaryLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_primary_language"
        android:inputType="textPersonName|textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/chkWill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_will" />

        <CheckBox
            android:id="@+id/chkAdvancedDirective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_advanced_directive" />

        <TextView
            android:id="@+id/lblLivesAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:text="@string/patient_lives_at" />

        <Spinner
            android:id="@+id/spnLivesAt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/LivesAtTypes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblStatusCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/patient_status_code" />

        <Spinner
            android:id="@+id/spnStatusCode"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:entries="@array/CodeStatusTypes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/chkFlu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_flu_shot" />

        <EditText
            android:id="@+id/txtFluDate"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patient_date"
            android:inputType="date" />

        <CheckBox
            android:id="@+id/chkPneumonia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_pneumonia" />

        <EditText
            android:id="@+id/txtPneumoniaDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_date"
            android:inputType="date" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtAddressStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_address_street"
        android:inputType="textPostalAddress|textCapWords" />

    <EditText
        android:id="@+id/txtAddressStreet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_street_2"
        android:inputType="textPostalAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtAddressCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_city"
            android:inputType="textPostalAddress|textCapWords" />

        <EditText
            android:id="@+id/txtAddressState"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patient_state"
            android:inputType="textPostalAddress|textCapCharacters"
            android:maxLength="2" />

        <EditText
            android:id="@+id/txtAddressZipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_zip_code"
            android:includeFontPadding="true"
            android:inputType="number"
            android:maxLength="5" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_contact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:ems="10"
            android:hint="@string/patient_phone_number"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/spnPhoneType"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:entries="@array/PhoneNumberTypes" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblEmergencyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_emergency_contact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtEmgName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_emergency_full_name"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/txtEmgRelationship"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patient_emg_relationship"
            android:inputType="text|textCapWords" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtEmgPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_phone_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/lblInsuranceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_insurance_information"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtInsCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_insurance_company_name"
        android:inputType="textPersonName|textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtInsPolicyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_insurance_policy_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtInsPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patient_phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end" >

        <Button
            android:id="@+id/btnAddPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_patient" />

    </RelativeLayout>

    

        
        </LinearLayout>
    </ScrollView>

</LinearLayout>