<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.attemper.emr.SkinBreakdownDialogFragment" >

    <EditText
        android:id="@+id/txtSiteBreakdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/site" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/chkDrainage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drainage" />

    <CheckBox
        android:id="@+id/chkDressing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dressing" />

    <CheckBox
        android:id="@+id/chkRednessBreakdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redness" />

    <EditText
        android:id="@+id/txtStage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stage" />

</LinearLayout>
