<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <TextView
        android:id="@+id/txtListItemLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_last_name" />

    <TextView
        android:id="@+id/txtListItemFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_first_name" />

    <TextView
        android:id="@+id/txtListItemBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_birthdate" />

    <TextView
        android:id="@+id/txtListItemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

</LinearLayout>
