<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.attemper.emr.SearchActivity" >

    <TextView
        android:id="@+id/txtListItemLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtLastNameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_last_name"
        android:inputType="textCapWords|textPersonName">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtFirstNameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_first_name"
        android:inputType="textCapWords|textPersonName" >
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="567dp"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <ListView
        android:id="@+id/lstSearchResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
